add UrlCheck.java, UrlsController.java and tests